[package]
name = "botdehoras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
mongodb = "2.6.1"
bson = "1.2.0"
futures = "0.3"

[dependencies.serenity]
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model"]
version = "0.11"

[dependencies.redis]
version = "*"